--- a/base-image/requirements.txt
+++ b/base-image/requirements.txt
@@ -1,18 +1,27 @@
+aiobotocore==2.2.0
 aiohttp==3.8.1
 aioitertools==0.10.0
 aiosignal==1.2.0
 asttokens==2.0.5
 async-timeout==4.0.2
 attrs==21.4.0
-awscli==1.23.1
+awscli==1.22.76
 backcall==0.2.0
 blosc==1.10.2
 bokeh==2.4.2
-botocore==1.25.1
+botocore==1.24.21
+brotlipy==0.7.0
+cachey==0.2.1
+certifi==2021.10.8
+cffi==1.15.0
 charset-normalizer==2.0.12
 click==8.1.2
 cloudpickle==2.0.0
-colorama==0.4.4
+colorama==0.4.3
+conda==4.12.0
+conda-package-handling==1.8.1
+cryptography==36.0.2
+cytoolz==0.11.2
 dask==2022.4.0
 dask-cloudprovider==2022.4.0
 debugpy==1.6.0
@@ -32,8 +41,10 @@ Jinja2==3.1.1
 jmespath==1.0.0
 jupyter-client==7.3.0
 jupyter-core==4.10.0
+libmambapy==0.23.0
 locket==1.0.0
 lz4==4.0.0
+mamba==0.23.0
 MarkupSafe==2.1.1
 matplotlib-inline==0.1.3
 msgpack==1.0.3
@@ -47,30 +58,41 @@ partd==1.2.0
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.1.0
+pip==22.0.4
 prompt-toolkit==3.0.29
 psutil==5.9.0
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyasn1==0.4.8
+pycosat==0.6.3
+pycparser==2.21
 Pygments==2.12.0
+pyOpenSSL==22.0.0
 pyparsing==3.0.8
+PySocks==1.7.1
 python-dateutil==2.8.2
 pytz==2022.1
 PyYAML==5.4.1
 pyzmq==22.3.0
+requests==2.27.1
 rsa==4.7.2
+ruamel-yaml-conda==0.15.80
 s3fs==0.4.2
 s3transfer==0.5.2
+setuptools==62.1.0
 six==1.16.0
 sortedcontainers==2.4.0
 stack-data==0.2.0
+streamz==0.6.3
 tblib==1.7.0
 toolz==0.11.2
 tornado==6.1
+tqdm==4.64.0
 traitlets==5.1.1
 typing_extensions==4.2.0
 urllib3==1.26.9
 wcwidth==0.2.5
+wheel==0.37.1
 wrapt==1.14.0
 yarl==1.7.2
 zict==2.1.0
