removed conda update and double checked all the package versions

--- a/base-image/Dockerfile
+++ b/base-image/Dockerfile
@@ -10,7 +10,7 @@ ENV PATH /opt/conda/bin:$PATH
 ENV PYTHON_VERSION=$python
 ENV DASK_VERSION=$dask_version
 
-RUN conda update conda
+# RUN conda update conda
 RUN conda install --yes -c conda-forge nomkl cytoolz cmake mamba python=${PYTHON_VERSION} \
     && mamba install --yes -c conda-forge \
     python-blosc \
