--- a/base-image/requirements.txt
+++ b/base-image/requirements.txt
@@ -1,4 +1,4 @@
-aiobotocore==2.2.0
+aiobotocore==2.3.3
 aiohttp==3.8.1
 aioitertools==0.10.0
 aiosignal==1.2.0
@@ -18,8 +18,8 @@ charset-normalizer==2.0.12
 click==8.1.2
 cloudpickle==2.0.0
 colorama==0.4.3
-conda==4.12.0
-conda-package-handling==1.8.1
+# conda==4.12.0
+# conda-package-handling==1.8.1
 cryptography==36.0.2
 cytoolz==0.11.2
 dask==2022.4.0
@@ -41,10 +41,10 @@ Jinja2==3.1.1
 jmespath==1.0.0
 jupyter-client==7.3.0
 jupyter-core==4.10.0
-libmambapy==0.23.0
+libmambapy==0.24.0
 locket==1.0.0
 lz4==4.0.0
-mamba==0.23.0
+mamba==0.24.0
 MarkupSafe==2.1.1
 matplotlib-inline==0.1.3
 msgpack==1.0.3
@@ -98,3 +98,4 @@ yarl==1.7.2
 zict==2.1.0
 pyarrow==7.0.0
 awswrangler==2.15.1
+boto3==1.21.21
