--- a/base-image/requirements.txt
+++ b/base-image/requirements.txt
@@ -1,14 +1,20 @@
+aenum==3.1.11
 aiobotocore==2.3.3
 aiohttp==3.8.1
 aioitertools==0.10.0
 aiosignal==1.2.0
+asn1crypto==1.5.1
 asttokens==2.0.5
 async-timeout==4.0.2
 attrs==21.4.0
 awscli==1.22.76
+awswrangler==2.15.1
 backcall==0.2.0
+backoff==1.11.1
+beautifulsoup4==4.11.1
 blosc==1.10.2
 bokeh==2.4.2
+boto3==1.21.21
 botocore==1.24.21
 brotlipy==0.7.0
 cachey==0.2.1
@@ -18,84 +24,123 @@ charset-normalizer==2.0.12
 click==8.1.2
 cloudpickle==2.0.0
 colorama==0.4.3
-# conda==4.12.0
-# conda-package-handling==1.8.1
+conda==4.12.0
+conda-package-handling==1.8.0
 cryptography==36.0.2
+cycler==0.11.0
+Cython==0.29.30
 cytoolz==0.11.2
 dask==2022.4.0
 dask-cloudprovider==2022.4.0
+deap==1.3.1
 debugpy==1.6.0
 decorator==5.1.1
 distributed==2022.4.0
 docutils==0.15.2
 entrypoints==0.4
+et-xmlfile==1.1.0
 executing==0.8.3
+fonttools==4.34.4
 frozenlist==1.3.0
 fsspec==2022.3.0
+gremlinpython==3.6.0
+hdbscan==0.8.28
 HeapDict==1.0.1
+hmmlearn==0.2.7
 idna==3.3
 ipykernel==6.13.0
 ipython==8.2.0
+isodate==0.6.1
 jedi==0.18.1
 Jinja2==3.1.1
 jmespath==1.0.0
+joblib==1.1.0
+jsonpath-ng==1.5.3
 jupyter-client==7.3.0
 jupyter-core==4.10.0
+kiwisolver==1.4.3
+kneed==0.7.0
 libmambapy==0.24.0
+llvmlite==0.38.1
 locket==1.0.0
+lxml==4.9.0
 lz4==4.0.0
 mamba==0.24.0
 MarkupSafe==2.1.1
+matplotlib==3.5.2
 matplotlib-inline==0.1.3
 msgpack==1.0.3
 multidict==6.0.2
 nest-asyncio==1.5.5
+numba==0.55.2
 numpy==1.22.3
+openpyxl==3.0.10
+opensearch-py==1.1.0
 packaging==21.3
 pandas==1.4.2
 parso==0.8.3
 partd==1.2.0
+patsy==0.5.2
 pexpect==4.8.0
+pg8000==1.29.1
 pickleshare==0.7.5
 Pillow==9.1.0
 pip==22.0.4
+ply==3.11
+progressbar2==4.0.0
 prompt-toolkit==3.0.29
 psutil==5.9.0
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pyarrow==7.0.0
 pyasn1==0.4.8
 pycosat==0.6.3
 pycparser==2.21
 Pygments==2.12.0
+PyMySQL==1.0.2
+pynndescent==0.5.7
 pyOpenSSL==22.0.0
 pyparsing==3.0.8
 PySocks==1.7.1
 python-dateutil==2.8.2
+python-utils==3.3.3
 pytz==2022.1
 PyYAML==5.4.1
 pyzmq==22.3.0
+redshift-connector==2.0.907
 requests==2.27.1
+requests-aws4auth==1.1.2
 rsa==4.7.2
 ruamel-yaml-conda==0.15.80
 s3fs==0.4.2
 s3transfer==0.5.2
+scikit-learn==1.1.1
+scipy==1.8.1
+scramp==1.4.1
+seaborn==0.11.2
 setuptools==62.1.0
 six==1.16.0
 sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
 stack-data==0.2.0
+statsmodels==0.13.2
+stopit==1.1.2
 streamz==0.6.3
 tblib==1.7.0
+threadpoolctl==3.1.0
 toolz==0.11.2
 tornado==6.1
+TPOT==0.11.7
 tqdm==4.64.0
 traitlets==5.1.1
+tslearn==0.5.2
 typing_extensions==4.2.0
+umap-learn==0.5.3
+update-checker==0.18.0
 urllib3==1.26.9
 wcwidth==0.2.5
 wheel==0.37.1
 wrapt==1.14.0
+xgboost==1.6.1
 yarl==1.7.2
 zict==2.1.0
-pyarrow==7.0.0
-awswrangler==2.15.1
-boto3==1.21.21
